# mahjong-chaos

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/rooms/: manager.py  room.py
backend/app/websocket/: __init__.py  connection_manager.py
backend/tests/: test_actions.py  test_api_routes.py  test_app.py  test_chi_gang.py  test_fan.py  test_hu_checker.py  test_new_skill_rules.py  test_new_skill_system.py  test_room_manager.py  test_scoring.py  test_skills.py  test_wall.py
core/mahjong/: __init__.py  actions.py  fan.py  game_state.py  hu_checker.py  player.py  scoring.py  tile.py  wall.py
core/skills/: __init__.py  base.py  new_skills.py  registry.py
docs/: deploy.md  design.md  online.md  skills.md
frontend/: app.js  build.mjs  index.html  package.json  styles.css
frontend-debug/: app.js  index.html
